<resources>
    <string name="app_name">Family Map</string>

    <string name="server_host">Server Host: </string>
    <string name="server_port">Server Port: </string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="fName">First Name: </string>
    <string name="lName">Last Name: </string>
    <string name="email">Email: </string>
    <string name="gender">Gender: </string>

    <string name="host_example">10.0.2.2</string>
    <string name="port_example">8080</string>
    <string name="username_example">helperMonkey030515</string>
    <string name="password_example">ilovebear2013</string>
    <string name="fName_example">John</string>
    <string name="lName_example">Reese</string>
    <string name="email_example">john.reese@gmail.com</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>

    <string name="map_default">Click on a marker to see event details</string>

    <string name="life_events">Life Events</string>
    <string name="family">Family</string>
    
    <string name="life_story_lines">Life Story Lines</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="fathers_side">Father\'s Side</string>
    <string name="mothers_side">Mother\'s Side</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="logout">Logout</string>

    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="filter_fathers_side">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="filter_mothers_side">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="filter_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout_description">RETURN TO LOGIN SCREEN</string>

    <string name="search">Search for a person or event</string>

</resources>
