<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:orientation="vertical"
    android:padding="24dp"
    android:visibility="visible"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/ServerHostView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/server_host" />

            <EditText
                android:id="@+id/serverHost_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/host_example"
                android:ems="14"
                android:hint="@string/host_example"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/ServerPortView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/server_port" />

            <EditText
                android:id="@+id/serverPort_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/port_example"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/UsernameView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/username_example"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/PasswordView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/password_example"
                android:inputType="textVisiblePassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/FirstNameView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/fName" />

            <EditText
                android:id="@+id/firstName_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/fName_example"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/LastNameView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lName" />

            <EditText
                android:id="@+id/lastName_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/lName_example"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/EmailView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email_enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            tools:context=".ui.main.MainActivity">

            <TextView
                android:id="@+id/GenderView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/gender" />


            <RadioGroup
                android:id="@+id/genderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/female"
                    android:textSize="14sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
