<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/person_fname_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fName" />


                <TextView
                    android:id="@+id/person_lname_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="14dp"
                    android:text="@string/lName" />

                <TextView
                    android:id="@+id/person_gender_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:paddingTop="14dp"
                    android:text="@string/gender" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/person_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/fName" />

                <TextView
                    android:id="@+id/person_lname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="14dp"
                    android:text="@string/lName" />

                <TextView
                    android:id="@+id/person_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingTop="14dp"
                    android:text="@string/gender" />
            </LinearLayout>


        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text_view_life_events"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/life_events" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text_view_family"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/light_gray"
            android:gravity="center"
            android:text="@string/family" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/white" />
    </LinearLayout>

</ScrollView>